@@ -1,6 +1,7 @@
 package dev.quarris.engulfingdarkness.effect;
 
 import dev.quarris.engulfingdarkness.registry.EffectSetup;
+import net.minecraft.server.level.ServerLevel;
 import net.minecraft.world.effect.MobEffect;
 import net.minecraft.world.effect.MobEffectCategory;
 import net.minecraft.world.entity.LivingEntity;
@@ -9,7 +10,6 @@ import net.minecraft.world.entity.ai.attributes.Attributes;
 import net.minecraft.world.entity.ai.targeting.TargetingConditions;
 import net.minecraft.world.entity.player.Player;
 import net.minecraft.world.level.Level;
-import net.minecraftforge.event.entity.living.LivingChangeTargetEvent;
 import net.minecraftforge.event.entity.living.LivingDamageEvent;
 import net.minecraftforge.event.entity.living.LivingEvent;
 import net.minecraftforge.eventbus.api.SubscribeEvent;
@@ -17,6 +17,7 @@ import net.minecraftforge.fml.common.Mod;
 
 import java.util.Comparator;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class EasyTargetEffect extends MobEffect {
 
@@ -27,7 +28,7 @@ public class EasyTargetEffect extends MobEffect {
     @Mod.EventBusSubscriber
     public static class Events {
 
-        private static final TargetingConditions EASY_TARGET_TEST = TargetingConditions.forCombat().ignoreLineOfSight().selector(e -> e.hasEffect(EffectSetup.EASY_TARGET.get()));
+        private static final TargetingConditions EASY_TARGET_TEST = TargetingConditions.forCombat().ignoreLineOfSight().selector((e, l) -> e.hasEffect(EffectSetup.EASY_TARGET.getHolder().get()));
 
         @SubscribeEvent
         public static void focusEasyTarget(LivingEvent.LivingTickEvent event) {
@@ -36,22 +37,23 @@ public class EasyTargetEffect extends MobEffect {
             }
 
             LivingEntity target = mob.getTarget();
-            if (target == null || target.hasEffect(EffectSetup.EASY_TARGET.get())) {
+            if (target == null || target.hasEffect(EffectSetup.EASY_TARGET.getHolder().get())) {
                 return;
             }
 
             LivingEntity entity = event.getEntity();
-            Level level = entity.getLevel();
+            Level level = entity.level();
+            if (!(level instanceof ServerLevel serverLevel)) return;
             double followRange = event.getEntity().getAttributeValue(Attributes.FOLLOW_RANGE);
-            List<Player> players = level.getNearbyPlayers(EASY_TARGET_TEST.range(followRange), event.getEntity(), entity.getBoundingBox().inflate(followRange, 4, followRange));
+            List<Player> players = level.players().stream().filter(e -> EASY_TARGET_TEST.range(followRange).test(serverLevel, entity, e)).collect(Collectors.toList());
             if (players.isEmpty()) return;
             players.sort(Comparator.comparingDouble(entity::distanceToSqr));
-            mob.setTarget(players.get(0));
+            mob.setTarget(players.getFirst());
         }
 
         @SubscribeEvent
         public static void increaseDamageTaken(LivingDamageEvent event) {
-            if (!event.getEntity().hasEffect(EffectSetup.EASY_TARGET.get())) {
+            if (!event.getEntity().hasEffect(EffectSetup.EASY_TARGET.getHolder().get())) {
                 return;
             }
 
